--- a/ui/main.ui
+++ b/ui/main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>916</width>
-    <height>731</height>
+    <width>1107</width>
+    <height>919</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,9 +18,9 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>70</y>
+      <y>61</y>
       <width>181</width>
-      <height>22</height>
+      <height>31</height>
      </rect>
     </property>
    </widget>
@@ -40,8 +40,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>70</y>
+      <x>30</x>
+      <y>66</y>
       <width>61</width>
       <height>21</height>
      </rect>
@@ -55,9 +55,14 @@
      <rect>
       <x>10</x>
       <y>100</y>
-      <width>891</width>
-      <height>192</height>
+      <width>1061</width>
+      <height>411</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>돋움체</family>
+     </font>
     </property>
     <property name="selectionMode">
      <enum>QAbstractItemView::SingleSelection</enum>
@@ -65,12 +70,62 @@
     <property name="selectionBehavior">
      <enum>QAbstractItemView::SelectRows</enum>
     </property>
+    <column>
+     <property name="text">
+      <string>종목명</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>손익금액</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>손익율</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>매입금액</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>보유수량</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>평균단가</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>현재가</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>등락율</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>거래대비</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>전일대비기호</string>
+     </property>
+    </column>
    </widget>
    <widget class="QLineEdit" name="edt_stockname">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>310</y>
+      <y>520</y>
       <width>181</width>
       <height>31</height>
      </rect>
@@ -82,53 +137,104 @@
      </font>
     </property>
     <property name="text">
-     <string>모나미</string>
+     <string/>
     </property>
     <property name="echoMode">
      <enum>QLineEdit::Normal</enum>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_search_stock">
-    <property name="geometry">
-     <rect>
-      <x>200</x>
-      <y>310</y>
-      <width>71</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>검색</string>
-    </property>
-   </widget>
    <widget class="QTableWidget" name="tw_search_stocks">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>350</y>
-      <width>891</width>
-      <height>111</height>
+      <x>200</x>
+      <y>520</y>
+      <width>641</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="selectionBehavior">
      <enum>QAbstractItemView::SelectRows</enum>
     </property>
+    <column>
+     <property name="text">
+      <string>종목명</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>현재가</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>등락율</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>거래량</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>거래대비</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>유통비율</string>
+     </property>
+    </column>
+   </widget>
+   <widget class="QPushButton" name="btn_mystocks">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>60</y>
+      <width>71</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>조회</string>
+    </property>
+   </widget>
+   <widget class="QListWidget" name="lw_search_stocks">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>560</y>
+      <width>181</width>
+      <height>101</height>
+     </rect>
+    </property>
    </widget>
    <widget class="QSplitter" name="splitter">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>480</y>
-      <width>675</width>
+      <x>200</x>
+      <y>630</y>
+      <width>641</width>
       <height>31</height>
      </rect>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
-    <widget class="QLineEdit" name="edt_buy_name"/>
-    <widget class="QLineEdit" name="edt_buy_price"/>
-    <widget class="QLineEdit" name="edt_buy_count"/>
+    <widget class="QLineEdit" name="edt_buy_name">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="edt_buy_price">
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QSpinBox" name="buy_count"/>
     <widget class="QLineEdit" name="edt_buy_amt"/>
     <widget class="QPushButton" name="btn_buy0">
      <property name="text">
@@ -142,7 +248,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>916</width>
+     <width>1107</width>
      <height>21</height>
     </rect>
    </property>
